# bert-playground

./: .coverage  .coverage.Parkers-Mac-Studio.local.87065.XVkRbKGx  .coveragerc  .gitignore  BERT_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONSOLIDATION_PLAN.md  DATALOADER_ARCHITECTURE.md  DATALOADER_CLEANUP_PLAN.md  DATALOADER_FIX_PLAN.md  DI_SYSTEM_OVERHAUL_COMPLETE.md  HEXAGONAL_ARCHITECTURE_SUMMARY.md  HUGGINGFACE_INTEGRATION.md  KAGGLE_INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MLX_DATALOADER_PLAN_V2.md  MLX_EMBEDDINGS_MIGRATION_GUIDE.md  MLX_OPTIMIZATIONS_SUMMARY.md  README.md  benchmark_optimizations.py  bert_cli.py  competition_run_info.txt  coverage.xml  debug_dataloader.py  debug_training.py  demo.py  evaluate_and_submit.py  evaluate_model.py  generate_submission.py  k-bert.example.yaml  k-bert.yaml  load_cnn_hybrid_model.py  main.py  minimal_test.py  minimal_trainer_debug.py  mlx_bert_cli.py  modernbert_config_info.py  modernbert_config_usage.py  (+44 more)
.github/workflows/: cli-contract-tests.yml  tests-staged.yml  tests.yml  unit-tests.yml
adapters/primary/: IMPLEMENTATION_SUMMARY.md  MIGRATION_EXAMPLE.md  README.md  __init__.py
adapters/secondary/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md
application/: __init__.py
application/commands/: __init__.py  evaluate.py  export.py  predict.py  train.py
application/data/: data_models.py  data_service.py  interfaces.py  models.py  services.py
application/dto/: __init__.py  export.py  (+3 more)
benchmarks/: event_system_benchmarks.py  hexagonal_benchmarks.py  plugin_system_benchmarks.py
bert_playground/: __main__.py
bert_playground.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: README.md  __init__.py  __main__.py  _version.py  app.py  bootstrap.py  bootstrap_simple.py  di.py  factory.py  main.py  main_simple.py  middleware.py
configs/: advanced_training.yaml  best_model_only.yaml  competition_best_only.yaml  development.yaml  kaggle.yaml  no_compilation.yaml  no_compile.yaml  production.json  production.yaml  quick.yaml  quickstart.yaml  spaceship_titanic.yaml  test.yaml  titanic_best.yaml  titanic_competition.yaml  titanic_example.json  titanic_lora.yaml  titanic_production.json  titanic_production.yaml
core/: __init__.py  bootstrap.py  compatibility.py  factory.py
data/: CONSOLIDATION_SUMMARY.md  README.md  __init__.py  builder.py  composed_dataset.py  dataloader.py  dataset_spec.py  datasets.py  di.py  enhanced_unified_loader.py  factory.py  mlx_dataloader.py  mlx_enhanced_loader.py  mlx_streaming.py  optimized_loader.py  spaceship_loader.py  spaceship_text_templates.py  text_generation.py  text_templates.py  titanic_loader.py  unified_loader.py  universal_loader.py
debug_output/: trainer_config.yaml
demos/: demo.py  demo_mlflow.py  hello.py
docs/: API_CONTRACT_TESTS_SUMMARY.md  AUGMENTATION_GUIDE.md  CLI_API_CONTRACTS.md  CLI_PLUGIN_DEVELOPMENT.md  CLI_TESTING_SUMMARY.md  DATA_MODULE_GUIDE.md  EVENT_SYSTEM_GUIDE.md  HEXAGONAL_ARCHITECTURE_GUIDE.md  HEXAGONAL_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  MODULAR_BERT_ARCHITECTURE.md  PHASE2_MIGRATION_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  advanced_logging_guide.md  cli-refactoring-summary.md  config-first-cli.md  hexagonal_architecture.md  kaggle-workflow-guide.md  loss_functions_research.md  loss_functions_summary.md  migration-to-config-first.md  mlflow-integration-guide.md  training_hang_fix.md
domain/: __init__.py  registry.py
embeddings/: __init__.py  config.py  migration.py  mlx_adapter.py  model_wrapper.py  tokenizer_wrapper.py
examples/: advanced_classification_examples.py  advanced_logging_demo.py  augmentation_demo.py  bert_enhancements_demo.py  hexagonal_demo.py  k-bert.yaml  kaggle_bert_training.py  kaggle_workflow_example.py  lora_kaggle_example.py  mlx_neural_backend_demo.py  modular_bert_example.py  simple_hexagonal_demo.py  titanic_augmentation_demo.py  train_with_modular_dataloader.py  universal_loader_demo.py
infrastructure/: __init__.py  bootstrap.py
legacy/: train_titanic.py
minimal_debug_output/: trainer_config.yaml
minimal_test/: trainer_config.yaml
models/: IMPLEMENTATION_STATUS.md  README.md  __init__.py  classification.py  classification_head.py  classification_head_v2.py  di.py  factory.py  factory_enhanced.py  factory_facade.py  modernbert.py  modernbert_cnn_hybrid.py  modernbert_optimized.py  port_based_factory.py  quantization_utils.py  wrapper.py
no_hooks_test_output/: trainer_config.yaml
no_prefetch_test_output/: trainer_config.yaml
ports/: README.md  __init__.py
real_loader_test_output/: trainer_config.yaml
scripts/: auto_submit_workflow.py  create_spaceship_sample_data.py  download_spaceship_titanic.py  download_titanic.py  migrate_configs_to_yaml.py  migrate_mlflow_databases.py  split_data.py  test_training.py  train_background.sh  train_production.sh
simple_test_output/: trainer_config.yaml
submissions/: cnn_hybrid_test.csv
test_mlflow_output/: memory_report.json  performance_report.json  performance_summary.json
test_output/: memory_report.json  performance_report.json  performance_summary.json  trainer_config.yaml
tests/: README.md  TEST_RESTRUCTURING_SUMMARY.md  __init__.py  conftest.py  mlflow_test_runner.py  test_classic_bert_compliance.py  test_mlx_embeddings.py
training/: README.md  __init__.py  checkpoint_manager.py  compat.py  competition_factory.py  config.py  error_handling.py  factory.py  memory_manager.py  mlx_optimized_trainer.py  mlx_trainer.py  mlx_trainer_old.py  mlx_trainer_v2.py  monitoring.py  performance_profiler.py  protocols.py  rich_display_manager.py  trainer.py  trainer_v2.py  unified_config.py
utils/: config_loader.py  evaluation.py  gradient_utils.py  kaggle_integration.py  kaggle_mlflow_tracking.py  logging_config.py  logging_utils.py  loguru_advanced.py  loss_functions.py  memory_profiler.py  mlflow_central.py  mlflow_config.py  mlflow_dashboard.py  mlflow_evaluation.py  mlflow_health.py  mlflow_helper.py  mlflow_utils.py  mlx_compatibility.py  mlx_patch.py  model_registry.py  visualization.py
(+951 files in other folders)
